# music2vec

./: .gitignore  Cargo.toml
migrations/: 001_init_tables.sql  002_add_vector.sql  003_scrapper.sql
src/: dataset.rs  main.rs  model.rs  train.rs
