[package]
name = "music2vec"
version = "0.1.0"
edition = "2024"
default-run = "music2vec"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
rand = "0.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
burn = {version="=0.18.0",default-features = false, features=["train", "wgpu"]}
itertools = "0.10"
pgvector = { version = "0.3.0", features = ["sqlx"] }
serde_json = "1.0"
futures = "0.3.0"
rayon = "1.10"
dotenvs = "0.1.0"
indicatif = "0.17"
csv = "1"
ndarray = "0.15"
smartcore = "0.3"

base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
hex = "0.4"
otpauth = "0.5.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "brotli", "gzip", "deflate", "cookies", "rustls-tls"] }
scraper = "0.19"
url = "2"

[[bin]]
name = "load"
path = "src/bin/load.rs"

[[bin]]
name = "pca"
path = "src/bin/pca.rs"

[[bin]]
name = "scrapper"
path = "src/bin/scrapper.rs"